syntax = "proto3";
package github.com.hobord.infra2.session;
option go_package = "session";
import "google/protobuf/struct.proto";

service SessionService {
  rpc GetSession(GetSessionMessage) returns (SessionResponse) {}
  rpc CreateSession(CreateSessionMessage) returns (SessionResponse) {}
  rpc AddValueToSession(AddValueToSessionMessage) returns (SessionResponse) {}
  rpc AddValuesToSession(AddValuesToSessionMessage) returns (SessionResponse) {}
  rpc InvalidateSessionValue(InvalidateSessionValueMessage) returns (SuccessMessage) {}
  rpc InvalidateSessionValues(InvalidateSessionValuesMessage) returns (SuccessMessage) {}
  rpc InvalidateSession(InvalidateSessionMessage) returns (SuccessMessage) {}
}

message SuccessMessage {
  bool Successfull = 1;
}

message CreateSessionMessage {
  int64 ttl = 1;
}

message GetSessionMessage {
  string id = 1;
}


message AddValueToSessionMessage {
  string id = 1; // session id
  string key = 2; // key in session
  google.protobuf.Value value = 3; // value
}


message AddValuesToSessionMessage {
  string id = 1; // session id
  map<string, google.protobuf.Value> values = 3; // value
}

message SessionResponse {
  string id = 1; // session id
  map<string, google.protobuf.Value> values = 2; // values
}

message InvalidateSessionMessage {
  string id = 1; // session id
}

message InvalidateSessionValueMessage {
  string id = 1; // session id
  string key = 2; // key in session
}

message InvalidateSessionValuesMessage {
  string id = 1; // session id
  repeated string keys = 2; // key in session
}
